# nonograma-plp

./: FileIO.hs  LICENSE  README.md  nonograma.cabal
data/puzzles/: easy.json  hard.json  medium.json
data/saves/: save1.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/data/puzzles/: hard.json
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json
haskell/src/: Main.hs
haskell/src/Game/: Logic.hs  PuzzleParser.hs  SaveLoad.hs  UI.hs
nonograma-plp/: nonograma.cabal
nonograma-plp/dist-newstyle/cache/: compiler  config  elaborated-plan  source-hashes  up-to-date
nonograma-plp/src/Game/: Estrutura.hs  FileIO.hs  Logic.hs  Main.hs  SaveLoad.hs  UI.hs  Utils.hs
src/: Main.hs
src/Game/: Estrutura.hs  Logic.hs  Main.hs  PuzzleParser.hs  SaveLoad.hs  UI.hs  Utils.hs
test/: LogicTest.hs
