cabal-version:      2.4
name:              nonograma
version:           0.1.0.0
synopsis:          Um jogo de Nonograma em Haskell
category:          Game
license:           MIT
license-file:      LICENSE
maintainer:        kemilli.nicole.santos.lima@ccc.ufcg.edu.br
author:           Kemilli Lima

executable nonograma
  main-is:          Main.hs
  hs-source-dirs:   src/Game
  build-depends:    base >=4.7 && <5,
                    containers,
                    aeson,
                    text,
                    bytestring
  default-language: Haskell2010